[package]
name = "hyperbole"
version = "0.1.0"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Reserved for now near-future use."
homepage = "https://github.com/nytopop/hyperbole"
repository = "https://github.com/nytopop/hyperbole"
readme = "README.md"
documentation = "https://docs.rs/hyperbole"
keywords = ["web", "http", "hyper", "async", "framework"]
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "hyperbole_macros" ]

[dependencies]
hyperbole_macros = { path = "hyperbole_macros" }
futures = "0.3.4"
hyper = "0.13.5"
http = "0.2.1"
headers = "0.3.2"
frunk_core = "0.3.1"
bytes = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1.0"

[dev-dependencies]
tokio = { version = "0.2.20", features = ["macros"] }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
err-derive = "0.2.4"
