[package]
name = "hyperbole"
version = "0.1.0-alpha.0"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Reserved for now near-future use."
homepage = "https://github.com/nytopop/hyperbole"
repository = "https://github.com/nytopop/hyperbole"
readme = "README.md"
documentation = "https://docs.rs/hyperbole"
keywords = ["web", "http", "hyper", "async", "framework"]
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "hyperbole_macros" ]

[dependencies]
hyperbole_macros = { path = "hyperbole_macros" }
futures = "0.3.5"
hyper = "0.13.6"
http = "0.2.1"
headers = "0.3.2"
frunk_core = "0.3.1"
bytes = "0.5.5"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
percent-encoding = "2.1.0"
thiserror = "1.0.20"
hyper-staticfile = "0.5.3"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
