[package]
name = "hyperbole"
version = "0.1.0-alpha.0"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Reserved for now near-future use."
homepage = "https://github.com/nytopop/hyperbole"
repository = "https://github.com/nytopop/hyperbole"
readme = "README.md"
documentation = "https://docs.rs/hyperbole"
keywords = ["web", "http", "hyper", "async", "framework"]
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "hyperbole_macros" ]

[dependencies]
hyperbole_macros = { path = "hyperbole_macros" }
frunk_core = "0.3.1"
bytes = "0.5.5"
thiserror = "1.0.20"

# async
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "time"] }
pin-project = "0.4.22"

# http
hyper = "0.13.6"
hyper-staticfile = "0.5.3"
http = "0.2.1"
headers = "0.3.2"
mime = "0.3.16"
percent-encoding = "2.1.0"

# ser/de
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_urlencoded = "0.6.1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
