[package]
name = "hyperbole_macros"
version = "0.1.0"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macros for hyperbole."
homepage = "https://github.com/nytopop/hyperbole"
repository = "https://github.com/nytopop/hyperbole"
documentation = "https://docs.rs/hyperbole_macros"
keywords = ["web", "http", "hyper", "async", "framework"]
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
quote = "1.0.7"
